--- a/artikel.html
+++ b/artikel.html
@@ -18,14 +18,14 @@
      <!-- End CSS -->
 </head>
 <body>
-        <img src="images/hatsune.gif" alt="gambar" class="bg">
-        <div class="content">
+     <img src="images/hatsune.gif" alt="gambar" class="bg">
+     <div class="content">
             <!-- Start Logo -->
             <div class="container logo">
             <a href="index.html" title="web anime">
                 <img src="images/logowebanime.jpg" alt="logo web anime" width ="25%">
             </a>
-            </div>
+         </div>
             <!-- End Logo -->
         
             <!-- Start Menu Primer-->
@@ -52,11 +52,11 @@
             <a href="index.html" title="web anime">
                 <img src="images/ere.jpeg" alt="Perkembangan islam di jepang" width ="50%" height="50%">
             </a>
-                <p>Jepang merupakan salah satu negara termaju di kawasan Asia. Hampir semua alat transportasi di sejumlah 
-                negara merupakan produk dari negara berjuluk Negeri Sakura ini. Begitupun dengan teknologi, Jepang dikenal 
-                sebagai negara yang paling banyak melahirkan produk-produk canggih. Namun begitu, siapa yang menyangka bahwa
-                Islam pun bersemai di negara kepulauan Asia Timur ini. Meski populasi muslim masih menjadi golongan minoritas, 
-                tetapi geliat dakwah di Jepang terus bergema hingga sekarang.</p>
+                <p>Jepang merupakan salah satu negara termaju di kawasan Asia. Hampir semua alat transportasi di sejumlah negara 
+                   merupakan produk dari negara berjuluk Negeri Sakura ini. Begitupun dengan teknologi, Jepang dikenal sebagai negara 
+                   yang paling banyak melahirkan produk-produk canggih. Namun begitu, siapa yang menyangka bahwa islam pun bersemai di
+                   negara kepulauan Asia Timur ini. Meski populasi muslim masih menjadi golongan minoritas, tetapi geliat dakwah di 
+                   Jepang terus bergema hingga sekarang.</p>
                 <p><h2>Sejarah Islam Di Jepang </h2></p>
                 <p>Masuknya Islam ke Jepang sebenarnya sudah cukup lama. Salah satu sumber menyebut sekitar tahun 1877 hampir 
                    bersamaan dengan kahadiran agama Nasrani dari barat ke negara tersebut. Lebih tepatnya ketika kekhalifahan 
@@ -171,6 +171,6 @@
             <!-- Start Copyrigth -->
                 <p>Copyright &copy; 2019 - Web Anime</p>
             <!-- End Copyrigth -->
-            </div>
+       </div>
 </body>
 </html>
