--- a/informasi.html
+++ b/informasi.html
@@ -85,7 +85,7 @@
                    adalah dimana saat ibu barunya adalah Hina, guru yang ia sukai. Tidak hanya sampai disitu saja, bahkan saudara tiri nya saat ini adalah 
                    Rui yang pernah berhubungan dengannnya. Akankah cinta segitiga ini akan menemukan titik terangnya?</p>
             <a href="index.html" title="web anime">
-                <img src="images/domestickanojo.jpg" alt="web anime" width ="75%" height="75%">
+                <img src="images/domestickanojo - Copy.jpg" alt="web anime" width ="75%" height="75%">
             </a>
                 <p><h2>5. Fairy Tail Final Series (Fall 2018)</h2></p>
                 <p>Melanjutkan masa tayang dari musim Fall 2018. Ini merupakan season terakhir dari serial anime Fairy Tail. Masih mengisahkan tentang 
