--- a/beranda.html
+++ b/beranda.html
@@ -18,7 +18,7 @@
     <!-- End Description -->
 
     <!-- Start CSS -->
-    <link rel="stylesheet" href="styles/style.CSS">
+    <link rel="stylesheet" href="styles/style.css">
     <!-- End CSS -->
 </head>
 <body>
