--- a/beranda.html
+++ b/beranda.html
@@ -10,7 +10,7 @@
     <!-- End Title -->
 
     <!-- Start Favicon -->
-    <link rel="icon" href="erna/favicon.ico" type="icon">
+    <link rel="icon" href="images/favicon.ico" type="icon">
     <!-- End Favicon -->
 
     <!-- Start Description -->
