--- a/artikel.html
+++ b/artikel.html
@@ -14,7 +14,7 @@
     <!-- End Description -->
 
      <!-- Start CSS -->
-     <link rel="stylesheet" href="styles/style.CSS">
+     <link rel="stylesheet" href="styles/style.css">
      <!-- End CSS -->
 </head>
 <body>
