--- a/artikel.html
+++ b/artikel.html
@@ -22,7 +22,7 @@
     <div class="content">
         <!-- Start Logo -->
         <div class="container logo">
-            <a href="index.html" title="web anime">
+            <a href="beranda.html" title="web anime">
                 <img src="images/logowebanime.jpg" alt="logo web anime" width ="25%">
             </a>
         </div>
