--- a/informasi.html
+++ b/informasi.html
@@ -106,7 +106,7 @@
                    menantikan kisah petualangan Jojo dkk. Untuk cerita kali ini, nampaknya akan cukup lama karena akan berjumlah 39 episode. Jadi 
                    jangan khawatir, kalian akan puas melihat petualangan super cool dari Jojo.</p>
             <a href="beranda.html" title="web anime">
-                <img src="images/jojonokimyou.jpg" alt="web anime" width ="75%" height="75%">
+                <img src="images/jojonokimyou.jpg alt="web anime" width ="75%" height="75%">
             </a>
                 <p><h2>8. Kakegurui××</h2></p>
                 <p>Yeee… siapa yang sudah kangen dengan Jabami Yumeko? Kini ia siap untuk kembali menghibur kita semua dengan season kedua dari 
@@ -166,7 +166,7 @@
                    perampokan. Namun setelah kejadian itu dirinya malah terbangun di dunia fantasy sebagai sebuah slime. Disinilah kehidupan barunya dimulai ketika 
                    ia bisa mewujudkan keinginannya bersama para gadis cantik.</p>
             <a href="beranda.html" title="web anime">
-                <img src="images/tenseishitara.jpg" alt="web anime" width ="75%" height="75%">
+                <img src="images/tenseishitara - Copy.jpg" alt="web anime" width ="75%" height="75%">
             </a>
                 <p><h2>16. Toaru Majutsu no Index III (Fall 2018)</h2></p>
                 <p>Memang membutuhkan penantian yang panjang, namun akhirnya season ketiga Toaru Majutsu no Index rilis pada Fall 2018. Seperti kabar yang beredar, 
