--- a/faktaunik.html
+++ b/faktaunik.html
@@ -14,7 +14,7 @@
     <!-- End Description -->
 
     <!-- Start CSS -->
-    <link rel="stylesheet" href="styles/style.css">
+    <link rel="stylesheet" href="styles/style.CSS">
     <!-- End CSS -->
 </head>
 <body>
@@ -22,7 +22,7 @@
     <div class="content">
         <!-- Start Logo -->
         <div class="container logo">
-            <a href="beranda.html" title="web anime">
+            <a href="index.html" title="web anime">
                 <img src="images/logowebanime.jpg" alt="logo web anime" width ="25%">
             </a>
         </div>
@@ -49,7 +49,7 @@
         
     <!-- Start Jumbotron -->
       <h1>10 Fakta Unik Tentang Levi Ackerman Yang Jarang Diketahui Fans!</h1>
-        <a href="beranda.html" title="levi">
+        <a href="index.html" title="levi">
                 <img src="images/levi.jpg" alt="levi" width ="75%" height="75%">
         </a>
         <p>Levi punya “adik” perempuan? Pernah ingin membunuh Erwin? Lalu, seperti apakah wanita idaman Levi?
@@ -59,14 +59,14 @@
            diremehkan. Dalam serial manga yang dibuat oleh Hajime Isayama sendiri, Levi mendapatkan sebutan sebagai Humanity Strongest Soldier (Tentara Terkuat
            Manusia). Meski sering disorot di manga dan anime, tetapi ada beberapa fakta Levi Ackerman yang jarang diketahui fans, lho!</p>
         <p><h2>1. Nama Levi Memiliki Arti “Pemburu”</h2></p>
-        <a href="beranda.html" title="levi">
+        <a href="index.html" title="levi">
                 <img src="images/levier.gif" alt="levi" width ="75%" height="75%">
         </a>    
         <p>Nama Levi memiliki banyak sekali arti. Levi sendiri berasal dari bahasa Hebrew yang berarti ‘bergabung’. Akan tetapi, jika nama Levi diromanjikan
            memiliki arti ‘kebangkitan’ dalam bahasa Jepang. Selain dua arti di atas, Levi juga merupakan bentuk nama kecil dari ‘Lavente’ di Hungaria dan 
            memiliki arti ‘makhluk kecil’. Kalau di Slavia sendiri, Levi adalah bentuk nama kecil dari ‘Lovanta’ yang berarti pemburu.</p>
         <p><h2>2. Levi Awalnya Adalah Seorang Kriminal</h2></p>
-        <a href="beranda.html" title="levi">
+        <a href="index.html" title="levi">
                 <img src="images/leviisabelfarlan.jpg" alt="levi" width ="75%" height="75%">
         </a>
         <p>Dalam manga spin-off berjudul Attack on Titan: No Regrets yang merupakan manga prekuel dari Attack on Titan, diceritakan bahwa Levi adalah seorang 
@@ -75,14 +75,14 @@
            Kelompok Levi ini terbukti cukup berbahaya karena bahkan Military Police Bridgade tidak sanggup menghadapi Levi dkk. Levi sendiri baru takluk ketika
            dia dan teman-temannya tertangkap oleh Erwin dan Survey Corps.</p>
         <p><h2>3. Punya “Adik” Perempuan Bernama Isabel Magnolia</h2></p>
-        <a href="beranda.html" title="levi">
+        <a href="index.html" title="levi">
                 <img src="images/isabel.gif" alt="levi" width ="75%" height="75%">
         </a>
         <p>Levi memiliki “adik” bernama Isabel Magnolia. Bukan adik kandung, melainkan seorang teman yang menganggap Levi sebagai sosok kakak yang dihormati. 
            Isabel begitu menghormati Levi hingga memanggilnya ‘nii-chan/san‘ (aniki di anime). Levi sendiri sangat protective terhadap Isabel, bahkan dia 
            sampai membunuh orang-orang yang telah melukai dan memotong rambut Isabel.  Hii…</p>
         <p><h2>4. Levi Pernah Ingin Membunuh Erwin</h2></p>
-        <a href="beranda.html" title="levi">
+        <a href="index.html" title="levi">
                 <img src="images/levierwin.png" alt="levi" width ="75%" height="75%">
         </a>
         <p>Hubungan Levi dan Erwin tidaklah sedekat seperti dalam manga Attack on Titan saat ini. Dalam manga Attack on Titan: No Regrets, diceritakan bahwa
@@ -90,7 +90,7 @@
            untuk membunuh Erwin. Akan tetapi, seiring berjalannya cerita, Levi pun melupakan keinginannya untuk balas dendam dan menjadi pendukung penuh Erwin.
            Dan keduanya pun menjadi sahabat dekat seperti yang kita ketahui saat ini.</p>
         <p><h2>5. Levi Lebih Tua dari pada Kelihatannya</h2></p>
-        <a href="beranda.html" title="levi">
+        <a href="index.html" title="levi">
                 <img src="images/levi3d.jpg" alt="levi" width ="75%" height="75%">
         </a>
         <p>Umur Levi adalah salah satu misteri yang membuat banyak fans penasaran. Dalam interview, Isayama sang kreator sendiri hanya memberikan petunjuk bahwa
@@ -98,28 +98,28 @@
            mengatakan bahwa umur Levi adalah hampir 40 tahun. Akan tetapi, Marina Inoue (seiyuu dari Armin Artlet) mengatakan bahwa Isayama salah menjawab karena
            saat diwawancarai itu dia gugup. Isayama kemudian meminta Inoue untuk mengatakan bahwa umur Levi adalah awal 30 tahunan (antara 30-35 tahun)!</p>
         <p><h2>6. Tidur Sehari 2-3 Jam Sambil Duduk!</h2></p>
-        <a href="beranda.html" title="levi">
+        <a href="index.html" title="levi">
                 <img src="images/levisleeping.jpg" alt="levi" width ="75%" height="75%">
         </a>
         <p>Isayama pernah mengatakan bahwa Levi mengidap insomia ringan. Dalam sehari, Levi hanya tidur selama 2-3 jam dan dia tidak pernah berganti pakaian ketika
            tidur, pun lebih suka tidur sambil duduk di kursi daripada di kasur. Ketika ditanya apa yang ingin dia katakan kepada Levi jika bertemu di dunia nyata, 
            Isayama menjawab: “Cepatlah tidur!”</p>
         <p><h2>7. Levi Berkeinginan Untuk Membuka Kedai Teh</h2></p>
-        <a href="beranda.html" title="levi">
+        <a href="index.html" title="levi">
                 <img src="images/levitea.gif" alt="levi" width ="75%" height="75%">
         </a> 
         <p>Berbeda dengan Erwin yang memiliki impian untuk memperjuangkan umat manusia di dalam dinding, keinginan Levi ternyata jauh lebih sederhana dan kasual. Dalam
            sebuah interview, Isayama mengatakan bahwa Levi memiliki impian untuk membuka sebuah Toko Teh. Tampaknya Levi ini agak terobsesi dengan teh. Hal itu didukung
            dengan fakta bahwa dia menyukai Teh Hitam dan suka mengoleksi daun teh.</p>
         <p><h2>8. Levi Suka Wanita Bertubuh Tinggi</h2></p>
-        <a href="beranda.html" title="levi">
+        <a href="index.html" title="levi">
                 <img src="images/petra.jpg" alt="levi" width ="75%" height="75%">
         </a> 
         <p>Khusus untuk kamu para perempuan yang mengidolakan Levi nih. Pernah kepikiran nggak, Levi itu suka wanita yang seperti apa? Dalam sebuah wawancara bersama 
            Hajime Isayama, dia pernah ditanyai ‘tipe wanita seperti apa yang disukai oleh Levi?’ Isayama pun menjawab:“Tipe wanita yang dia sukai? Karena dia pendek, 
            orang pendek lebih tertarik pada orang bertubuh tinggi… Jadi kurasa dia menyukai wanita bertubuh tinggi.”</p>
         <p><h2>9. Minimal Pernah Membunuh 34 Titan</h2></p>
-        <a href="beeranda.html" title="levi">
+        <a href="index.html" title="levi">
                 <img src="images/levikill.gif" alt="levi" width ="75%" height="75%">
         </a>
         <p>Pernahkah kamu menghitung total Titan yang sudah dibunuh oleh Levi. Yah, sejauh ini yang terlihat di manga, Levi sudah membunuh total 34 Titan, lho! Perlu 
@@ -127,7 +127,7 @@
            di manga Attack on Titan. Oh, dan lagi, Levi sejauh ini telah menghadapi 3 dari 4 Titan Shifter yang ada: Annie, Reiner (dalam wujud manusia) dan Zeke. Cuma
            Bertolt yang belum pernah dia hadapi. Dan sayangnya, seluruh Titan-Shifters ini tidak sampai dibunuh oleh Captain Levi.</p>
         <p><h2>10. “Kurang Asia” Alasan Levi Tidak Muncul di Film Live-Action</h2></p>
-        <a href="beranda.html" title="levi">
+        <a href="index.html" title="levi">
                 <img src="images/levihand.gif" alt="levi" width ="75%" height="75%">
         </a>
         <p>Jika kalian menonton film live-action Attack on Titan, kalian pasti akan menyadari bahwa film tersebut sangatlah berbeda dengan versi manga originalnya. Mulai dari
